--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,9 +12,9 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn clean install
-    - name: Publish Test Report
-      uses: starburstdata/action-testng-report@v1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+#     - name: Publish Test Report
+#       uses: starburstdata/action-testng-report@v1
+#       with:
+#         github_token: ${{ secrets.GITHUB_TOKEN }}
 
   
